--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp": "^3.9.0",
     "gulp-develop-server": "^0.4.3",
     "gulp-livereload": "^3.8.1",
-    "gulp-node-inspector": "^0.1.0"
+    "gulp-node-inspector": "^0.1.0",
+    "underscore": "^1.8.3"
   }
 }
